compiler/parser/osprey_parser.go
// Code generated from osprey.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // osprey
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ospreyParser struct {
	*antlr.BaseParser
}

var OspreyParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func ospreyParserInit() {
	staticData := &OspreyParserStaticData
	staticData.LiteralNames = []string{
		"", "'match'", "'if'", "'else'", "'select'", "'fn'", "'extern'", "'import'",
		"'type'", "'module'", "'let'", "'mut'", "'effect'", "'perform'", "'handle'",
		"'in'", "'do'", "'spawn'", "'yield'", "'await'", "'fiber'", "'channel'",
		"'send'", "'recv'", "'true'", "'false'", "'where'", "'as'", "'|>'",
		"'->'", "'=>'", "'_'", "'='", "'=='", "'!='", "'<='", "'>='", "'&&'",
		"'||'", "'!'", "'%'", "':'", "';'", "','", "'.'", "'|'", "'<'", "'>'",
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'?'", "'+'", "'-'", "'*'",
		"'/'",
	}
	staticData.SymbolicNames = []string{
		"", "MATCH", "IF", "ELSE", "SELECT", "FN", "EXTERN", "IMPORT", "TYPE",
		"MODULE", "LET", "MUT", "EFFECT", "PERFORM", "HANDLE", "IN", "DO", "SPAWN",
		"YIELD", "AWAIT", "FIBER", "CHANNEL", "SEND", "RECV", "TRUE", "FALSE",
		"WHERE", "AS", "PIPE", "ARROW", "LAMBDA", "UNDERSCORE", "EQ", "EQ_OP",
		"NE_OP", "LE_OP", "GE_OP", "AND_OP", "OR_OP", "NOT_OP", "MOD_OP", "COLON",
		"SEMI", "COMMA", "DOT", "BAR", "LT", "GT", "LPAREN", "RPAREN", "LBRACE",
		"RBRACE", "LSQUARE", "RSQUARE", "QUESTION", "PLUS", "MINUS", "STAR",
		"SLASH", "FLOAT", "INT", "INTERPOLATED_STRING", "STRING", "ID", "WS",
		"DOC_COMMENT", "COMMENT", "ANY_CHAR",
	}
	staticData.RuleNames = []string{
		"program", "statement", "importStmt", "letDecl", "assignStmt", "fnDecl",
		"pluginReturnType", "pluginContent", "pluginToken", "externDecl", "externParamList",
		"externParam", "paramList", "param", "typeDecl", "typeParamList", "unionType",
		"recordType", "variant", "fieldDeclarations", "fieldDeclaration", "typeValidation",
		"effectDecl", "opDecl", "effectSet", "effectList", "handlerExpr", "handlerArm",
		"handlerParams", "functionCall", "booleanExpr", "fieldList", "field",
		"type", "typeList", "exprStmt", "expr", "matchExpr", "nonTernaryExpr",
		"selectExpr", "selectArm", "binaryExpr", "ternaryExpr", "comparisonExpr",
		"logicalOrExpr", "logicalAndExpr", "addExpr", "mulExpr", "unaryExpr",
		"pipeExpr", "callExpr", "argList", "namedArgList", "namedArg", "primary",
		"objectLiteral", "typeConstructor", "typeArgs", "fieldAssignments",
		"fieldAssignment", "lambdaExpr", "updateExpr", "blockExpr", "literal",
		"listLiteral", "mapLiteral", "mapEntry", "docComment", "moduleDecl",
		"moduleBody", "moduleStatement", "matchArm", "pattern", "fieldPattern",
		"blockBody",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ospreyParserInit initializes any static state used to implement ospreyParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewospreyParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func OspreyParserInit() {
	staticData := &OspreyParserStaticData
	staticData.once.Do(ospreyParserInit)
}

// NewospreyParser produces a new parser instance for the optional input antlr.TokenStream.
func NewospreyParser(input antlr.TokenStream) *ospreyParser {
	OspreyParserInit()
	this := new(ospreyParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &OspreyParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "osprey.g4"

	return this
}

// ospreyParser tokens.
const (
	ospreyParserEOF                 = antlr.TokenEOF
	ospreyParserMATCH               = 1
	ospreyParserIF                  = 2
	ospreyParserELSE                = 3
	ospreyParserSELECT              = 4
	ospreyParserFN                  = 5
	ospreyParserEXTERN              = 6
	ospreyParserIMPORT              = 7
	ospreyParserTYPE                = 8
	ospreyParserMODULE              = 9
	ospreyParserLET                 = 10
	ospreyParserMUT                 = 11
	ospreyParserEFFECT              = 12
	ospreyParserPERFORM             = 13
	ospreyParserHANDLE              = 14
	ospreyParserIN                  = 15
	ospreyParserDO                  = 16
	ospreyParserSPAWN               = 17
	ospreyParserYIELD               = 18
	ospreyParserAWAIT               = 19
	ospreyParserFIBER               = 20
	ospreyParserCHANNEL             = 21
	ospreyParserSEND                = 22
	ospreyParserRECV                = 23
	ospreyParserTRUE                = 24
	ospreyParserFALSE               = 25
	ospreyParserWHERE               = 26
	ospreyParserAS                  = 27
	ospreyParserPIPE                = 28
	ospreyParserARROW               = 29
	ospreyParserLAMBDA              = 30
	ospreyParserUNDERSCORE          = 31
	ospreyParserEQ                  = 32
	ospreyParserEQ_OP               = 33
	ospreyParserNE_OP               = 34
	ospreyParserLE_OP               = 35
	ospreyParserGE_OP               = 36
	ospreyParserAND_OP              = 37
	ospreyParserOR_OP               = 38
	ospreyParserNOT_OP              = 39
	ospreyParserMOD_OP              = 40
	ospreyParserCOLON               = 41
	ospreyParserSEMI                = 42
	ospreyParserCOMMA               = 43
	ospreyParserDOT                 = 44
	ospreyParserBAR                 = 45
	ospreyParserLT                  = 46
	ospreyParserGT                  = 47
	ospreyParserLPAREN              = 48
	ospreyParserRPAREN              = 49
	ospreyParserLBRACE              = 50
	ospreyParserRBRACE              = 51
	ospreyParserLSQUARE             = 52
	ospreyParserRSQUARE             = 53
	ospreyParserQUESTION            = 54
	ospreyParserPLUS                = 55
	ospreyParserMINUS               = 56
	ospreyParserSTAR                = 57
	ospreyParserSLASH               = 58
	ospreyParserFLOAT               = 59
	ospreyParserINT                 = 60
	ospreyParserINTERPOLATED_STRING = 61
	ospreyParserSTRING              = 62
	ospreyParserID                  = 63
	ospreyParserWS                  = 64
	ospreyParserDOC_COMMENT         = 65
	ospreyParserCOMMENT             = 66
	ospreyParserANY_CHAR            = 67
)

// ospreyParser rules.
const (
	ospreyParserRULE_program           = 0
	ospreyParserRULE_statement         = 1
	ospreyParserRULE_importStmt        = 2
	ospreyParserRULE_letDecl           = 3
	ospreyParserRULE_assignStmt        = 4
	ospreyParserRULE_fnDecl            = 5
	ospreyParserRULE_pluginReturnType  = 6
	ospreyParserRULE_pluginContent     = 7
	ospreyParserRULE_pluginToken       = 8
	ospreyParserRULE_externDecl        = 9
	ospreyParserRULE_externParamList   = 10
	ospreyParserRULE_externParam       = 11
	ospreyParserRULE_paramList         = 12
	ospreyParserRULE_param             = 13
	ospreyParserRULE_typeDecl          = 14
	ospreyParserRULE_typeParamList     = 15
	ospreyParserRULE_unionType         = 16
	ospreyParserRULE_recordType        = 17
	ospreyParserRULE_variant           = 18
	ospreyParserRULE_fieldDeclarations = 19
	ospreyParserRULE_fieldDeclaration  = 20
	ospreyParserRULE_typeValidation    = 21
	ospreyParserRULE_effectDecl        = 22
	ospreyParserRULE_opDecl            = 23
	ospreyParserRULE_effectSet         = 24
	ospreyParserRULE_effectList        = 25
	ospreyParserRULE_handlerExpr       = 26
	ospreyParserRULE_handlerArm        = 27
	ospreyParserRULE_handlerParams     = 28
	ospreyParserRULE_functionCall      = 29
	ospreyParserRULE_booleanExpr       = 30
	ospreyParserRULE_fieldList         = 31
	ospreyParserRULE_field             = 32
	ospreyParserRULE_type              = 33
	ospreyParserRULE_typeList          = 34
	ospreyParserRULE_exprStmt          = 35
	ospreyParserRULE_expr              = 36
	ospreyParserRULE_matchExpr         = 37
	ospreyParserRULE_nonTernaryExpr    = 38
	ospreyParserRULE_selectExpr        = 39
	ospreyParserRULE_selectArm         = 40
	ospreyParserRULE_binaryExpr        = 41
	ospreyParserRULE_ternaryExpr       = 42
	ospreyParserRULE_comparisonExpr    = 43
	ospreyParserRULE_logicalOrExpr     = 44
	ospreyParserRULE_logicalAndExpr    = 45
	ospreyParserRULE_addExpr           = 46
	ospreyParserRULE_mulExpr           = 47
	ospreyParserRULE_unaryExpr         = 48
	ospreyParserRULE_pipeExpr          = 49
	ospreyParserRULE_callExpr          = 50
	ospreyParserRULE_argList           = 51
	ospreyParserRULE_namedArgList      = 52
	ospreyParserRULE_namedArg          = 53
	ospreyParserRULE_primary           = 54
	ospreyParserRULE_objectLiteral     = 55
	ospreyParserRULE_typeConstructor   = 56
	ospreyParserRULE_typeArgs          = 57
	ospreyParserRULE_fieldAssignments  = 58
	ospreyParserRULE_fieldAssignment   = 59
	ospreyParserRULE_lambdaExpr        = 60
	ospreyParserRULE_updateExpr        = 61
	ospreyParserRULE_blockExpr         = 62
	ospreyParserRULE_literal           = 63
	ospreyParserRULE_listLiteral       = 64
	ospreyParserRULE_mapLiteral        = 65
	ospreyParserRULE_mapEntry          = 66
	ospreyParserRULE_docComment        = 67
	ospreyParserRULE_moduleDecl        = 68
	ospreyParserRULE_moduleBody        = 69
	ospreyParserRULE_moduleStatement   = 70
	ospreyParserRULE_matchArm          = 71
	ospreyParserRULE_pattern           = 72
	ospreyParserRULE_fieldPattern      = 73
	ospreyParserRULE_blockBody         = 74
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ospreyParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ospreyParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ospreyParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(ospreyParserEOF, 0)
}

func (s *ProgramContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ospreyListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ospreyListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *ospreyParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ospreyParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(153)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-462427652543840270) != 0) || _la == ospreyParserDOC_COMMENT {
		{
			p.SetState(150)
			p.Statement()
		}

		p.SetState(155)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(156)
		p.Match(ospreyParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ImportStmt() IImportStmtContext
	LetDecl() ILetDeclContext
	AssignStmt() IAssignStmtContext
	FnDecl() IFnDeclContext
	ExternDecl() IExternDeclContext
	TypeDecl() ITypeDeclContext
	EffectDecl() IEffectDeclContext
	ModuleDecl() IModuleDeclContext
	ExprStmt() IExprStmtContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ospreyParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ospreyParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ospreyParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) ImportStmt() IImportStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStmtContext)
}

func (s *StatementContext) LetDecl() ILetDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILetDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILetDeclContext)
}

func (s *StatementContext) AssignStmt() IAssignStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignStmtContext)
}

func (s *StatementContext) FnDecl() IFnDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFnDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFnDeclContext)
}

func (s *StatementContext) ExternDecl() IExternDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExternDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExternDeclContext)
}

func (s *StatementContext) TypeDecl() ITypeDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeDeclContext)
}

func (s *StatementContext) EffectDecl() IEffectDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEffectDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEffectDeclContext)
}

func (s *StatementContext) ModuleDecl() IModuleDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModuleDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModuleDeclContext)
}

func (s *StatementContext) ExprStmt() IExprStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprStmtContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ospreyListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ospreyListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *ospreyParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ospreyParserRULE_statement)
	p.SetState(167)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(158)
			p.ImportStmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(159)
			p.LetDecl()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(160)
			p.AssignStmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(161)
			p.FnDecl()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(162)
			p.ExternDecl()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(163)
			p.TypeDecl()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(164)
			p.EffectDecl()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(165)
			p.ModuleDecl()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(166)
			p.ExprStmt()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}
